--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -9,11 +9,10 @@ jobs:
             - name: Checkout repo
               uses: actions/checkout@v4
 
-            - name: Welcome message
-              run: echo "My first GH Actions job"
+            - name: List and Read file
+              run: |
+                echo "My first GH Action job"
+                ls -ltra
+                cat README.md
 
-            - name: List files
-              run: ls
-
-            - name: Read file
-              run: cat README.md
+          
