--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -10,13 +10,13 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Install Cowsay Program
-              uses: sudo apt-get install cowsay -y
+              run: sudo apt-get install cowsay -y
 
             - name: Execute Cowsay CMD
-              uses: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt
+              run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt
 
             - name: Test file exists
-              uses: grep -i "dragon" dragon.txt
+              run: grep -i "dragon" dragon.txt
 
             - name: Read file
               run: cat dragon.txt
