--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -10,7 +10,9 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Executing Shell Script
-              run: ./ascii-script.sh
+              run: |
+                chmox + ascii-script.sh
+                ./ascii-script.sh
 
             - name: Checkout Repo files
               run: ls -ltra
