--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -11,7 +11,7 @@ jobs:
 
             - name: Executing Shell Script
               run: |
-                chmox + ascii-script.sh
+                chmod + ascii-script.sh
                 ./ascii-script.sh
 
             - name: Checkout Repo files
