--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -16,6 +16,7 @@ jobs:
               run: sleep 30
 
     test_job2:
+      needs: build_job1
       runs-on: ubuntu-latest
       steps: 
           - name: Sleep for 10 seconds
@@ -25,6 +26,7 @@ jobs:
             run: grep -i "dragon" dragon.txt
         
       deploy_job3:
+        needs: test_job2
         runs-on: ubuntu-latest
         steps: 
             - name: Read File
