--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -12,25 +12,35 @@ jobs:
             - name: Executy Cowsay cmd
               run: cowsay -f dragon "Run for Cover, I am a Dragon...RAWR" >> dragon.txt
 
-            - name: Sleep for 30 seconds
-              run: sleep 30
+            - name: Upload Dragon text file
+              uses: actions/upload-artifact@v4
+              with:
+                name: dragon-text-file
+                path: dragon.txt
 
     test_job2:
       needs: build_job1
       runs-on: ubuntu-latest
       steps: 
-          - name: Sleep for 10 seconds
-            run: sleep 10
-
-          - name: Test file exists
-            run: grep -i "dragon" dragon.txt
+        - name: Download Dragon text file
+          uses: actions/download-artifact@v4
+          with:
+            name: dragon-text-file
+            
+        - name: Test file exists
+          run: grep -i "dragon" dragon.txt
         
     deploy_job3:
       needs: test_job2
       runs-on: ubuntu-latest
       steps: 
-          - name: Read File
-            run: cat dragon.txt
+        - name: Download Dragon text file
+          uses: actions/download-artifact@v4
+          with:
+            name: dragon-text-file
+          
+        - name: Test file exists
+          run: cat dragon.txt
 
-          - name: Test file exists
-            run: echo Deploying...
+        - name: Test file exists
+          run: echo Deploying...
