--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -13,7 +13,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Docker Build
-          run: docker build -t ${{ env.CONTAINER_REGISTRY}}/dockerUsername/$IMAGE_NAME:latest
+          run: docker build -t ${{ env.CONTAINER_REGISTRY}}/$DOCKER_USERNAME/$IMAGE_NAME:latest
 
         - name: Docker login
           env:
@@ -28,4 +28,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Docker Run
-          run: docker ru -d -p 8080:80 docker.io/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: docker run -d -p 8080:80 docker.io/$DOCKER_USERNAME/$IMAGE_NAME:latest
