added secrets to docker

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -5,7 +5,6 @@ on:
 
 env:
     CONTAINER_REGISTRY: docker.io
-    DOCKER_USERNAME: jhashem35
     IMAGE_NAME: github-actions-nginx
 
 jobs:
@@ -13,12 +12,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Docker Build
-          run: docker build -t ${{ env.CONTAINER_REGISTRY}}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: docker build -t ${{ env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/$IMAGE_NAME:latest
 
         - name: Docker login
           env:
             DOCKER_PASSWORD: s3cUrePaSsw0rd
-          run: docker login --username=$DOCKER_USERNAME -password=$DOCKER_PASSWORD
+          run: docker login --username=$DOCKER_USERNAME -password=${{ secrets.DOCKER_PASSWORD }}
 
         - name: Docker Publish
           run: docker push docker.io/$DOCKER_USERNAME/$IMAGE_NAME:latest
