--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -12,19 +12,19 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Docker Build
-          run: docker build -t ${{ env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/$IMAGE_NAME:latest
+          run: echo docker build -t ${{ env.CONTAINER_REGISTRY}}/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
 
         - name: Docker login
           env:
             DOCKER_PASSWORD: s3cUrePaSsw0rd
-          run: docker login --username=$DOCKER_USERNAME -password=${{ secrets.DOCKER_PASSWORD }}
+          run: echo docker login --username=$DOCKER_USERNAME -password=${{ secrets.DOCKER_PASSWORD }}
 
         - name: Docker Publish
-          run: docker push docker.io/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: docker push docker.io/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
 
     deploy:
         needs: docker
         runs-on: ubuntu-latest
         steps:
         - name: Docker Run
-          run: docker run -d -p 8080:80 docker.io/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: echo docker run -d -p 8080:80 docker.io/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
