--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,7 +1,9 @@
 name: Exploring Variables and Secrets
 
 on: 
-    push
+    workflow_dispatch:
+
+    
 
 env:
     CONTAINER_REGISTRY: docker.io
@@ -23,6 +25,9 @@ jobs:
           run: docker push docker.io/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
 
     deploy:
+        concurrency:
+          group: production-deployment
+          cancel-in-progress: true
         needs: docker
         runs-on: ubuntu-latest
         steps:
