--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -22,7 +22,7 @@ jobs:
           run: echo docker login --username=$DOCKER_USERNAME -password=${{ secrets.DOCKER_PASSWORD }}
 
         - name: Docker Publish
-          run: docker push docker.io/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
+          run: echo docker push docker.io/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
 
     deploy:
         concurrency:
