added workflow dispatch job

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -3,8 +3,7 @@ name: Exploring Variables and Secrets
 on: 
     workflow_dispatch:
 
-    
-
+  
 env:
     CONTAINER_REGISTRY: docker.io
     IMAGE_NAME: github-actions-nginx
@@ -32,4 +31,5 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Docker Run
+          timeout-minutes: 1
           run: echo docker run -d -p 8080:80 docker.io/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
