--- a/.github/workflows/matrix-configuration.yml
+++ b/.github/workflows/matrix-configuration.yml
@@ -8,9 +8,17 @@ on:
 jobs:
     deploy:
         strategy:
+          fail-fast: true
+          max-parallel: 2
           matrix:
             os: [ubuntu-latest, ubunut-20.04, windows-latest]
             images: [hello-world, alpine]
+            exclude: 
+              - images: alpine
+                os: windows-latest
+            include: 
+              - images: amd64/alpine
+                os: ubuntu-20.04
         runs-on: ${{matrix.os}}
         steps:
         - name: Echo Docker Details
