--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -24,6 +24,7 @@ jobs:
           run: echo docker push docker.io/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
 
     deploy:
+        if: github.ref == 'refs/head/main'
         concurrency:
           group: production-deployment
           cancel-in-progress: true
