--- a/giphy/Dockerfile
+++ b/giphy/Dockerfile
@@ -4,8 +4,8 @@ FROM alpine:3.10
 RUN apk update && \
     apk add --no-cache curl jq
 
-COPY entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /giphy/entrypoint.sh
 
-RUN chmod +x /entrypoint.sh
+RUN chmod +x /giphy/entrypoint.sh
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/giphy/entrypoint.sh"]
